--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>How To NET</title>
+    </head>
+    <body>
+        <p>
 <a href="https://www.adipati.net/cara-cek-nomor-by-u/">Cara Cek Nomor By.u</a>
+        </p>
+    </body>
+</html>
